# django-filters-facet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: deploy.yaml  test.yaml
example-facets/: Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yaml  docker-entrypoint.sh  package-lock.json  package.json  postcss.config.js  requirements.txt  tailwind.config.js
example-facets/deploy/: ansible.cfg  deploy.yaml  echo-vault-pass.sh  inventory  k8s_auth_ssl_ca_cert.txt  requirements.txt  requirements.yaml
example-facets/deploy/group_vars/: k8s.yaml
example-facets/deploy/host_vars/: production.yaml
example-facets/example_project/: asgi.py  settings.py  urls.py  wsgi.py
example-facets/example_project/templates/: base.html
example-facets/films/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
example-facets/films/data/: load.py
example-facets/films/migrations/: 0001_initial.py  0002_film_description.py  0003_alter_film_country_alter_film_duration.py  0004_alter_film_director_alter_film_show_id_and_more.py  0005_genre_film_genres.py
example-facets/firearms/: apps.py  filters.py  models.py  urls.py  views.py
example-facets/firearms/data/: load.py  requirements.txt  scrape.py
example-facets/firearms/migrations/: 0001_initial.py
example-facets/traffic_stops/: apps.py  filters.py  models.py  urls.py  views.py
example-facets/traffic_stops/data/: export.sh  export.sql  import.sh
example-facets/traffic_stops/migrations/: 0001_initial.py  0002_alter_person_race.py
src/django_filters_facet/: __init__.py  facets.py  filters.py
tests/: factories.py  filters.py  models.py  settings.py  test_django_filters_facet.py  test_facet.py  test_filter_set.py
(+10 files in other folders)
